# bootlet

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
misc/: README.md  linux-dotconfig
src/: cli.rs  config.rs  constant.rs  main.rs  steps.rs
src/constant/: bootlet.conf  busybox-list.txt  init  loader.conf
src/loader/: download.rs  mod.rs  template.rs
src/steps/: partition.rs  rootfs.rs
