[package]
name = "bootlet"
description = "Lightweight Linux shell that boots before your OS "
license = "MIT"
authors = ["mincomk <mail@drchi.co.kr>"]
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
cpio = "0.4.1"
fatfs = "0.3.6"
indicatif = "0.18.3"
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"
